mTLS and L4 authorization with ztunnel in Istio Ambient Mesh/resources-ns1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
---

# Service for echo server

apiVersion: v1
kind: Service
metadata:
  name: echoserver-service-ns1
  namespace: ns1
spec:
  type: ClusterIP
  selector:
    app: echoserver-app-ns1
  ports:
    - port: 80
      targetPort: 80
---

# Deployment for echo server

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-depl-ns1
  namespace: ns1
  labels:
    app: echoserver-app-ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver-app-ns1
  template:
    metadata:
      labels:
        app: echoserver-app-ns1
    spec:
      serviceAccountName: echo-service-account-ns1
      containers:
        - name: echoserver-app-ns1
          image: imeshai/echoserver
          ports:
            - containerPort: 80
      nodeSelector:
        name: node1
---

# Service for sleep

apiVersion: v1
kind: Service
metadata:
  name: sleep-service-ns1
  namespace: ns1
  labels:
    app: sleep-app-ns1
    service: sleep-ns1
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep-app-ns1
---

# Deployment for sleep

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-depl-ns1
  namespace: ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-app-ns1
  template:
    metadata:
      labels:
        app: sleep-app-ns1
    spec:
      serviceAccountName: sleep-service-account-ns1
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
      nodeSelector:
        name: node1
---

# Service for notsleep

apiVersion: v1
kind: Service
metadata:
  name: notsleep-service-ns1
  namespace: ns1
  labels:
    app: notsleep-app-ns1
    service: notsleep-ns1
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: notsleep-app-ns1
---

# Deployment for notsleep

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notsleep-depl-ns1
  namespace: ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notsleep-app-ns1
  template:
    metadata:
      labels:
        app: notsleep-app-ns1
    spec:
      serviceAccountName: notsleep-service-account-ns1
      containers:
      - name: notsleep
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
      nodeSelector:
        name: node1
---
